<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Foodle</string>

    <!-- Google Analytics -->

    <string name="ui_action">ui_action</string>

    <!-- User Registration -->

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="enter_required_fields">You must fill all the required fields</string>
    <string name="register">Register</string>
    <string name="registration_error">Error, please try again</string>
    <string name="registration_text_subtitle">Register</string>
    <string name="registration_explicative_text">Register to enjoy all the features Foodle has to
        offer like it\s voting and contact management mechanisms </string>

    <!-- Pending Votes -->

    <string name="pending_votes">Pending Votes</string>
    <string name="not_now">Not now</string>

    <!-- Add Recipe -->

    <string name="action_add_recipe">Add Recipe</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="addrecipe_name">Recipe\'s name</string>
    <string name="existing_recipes">Recipes</string>

    <!-- Recipe Selection -->

    <string name="recipe_selection">Add Candidate Recipes</string>
    <string name="candidate_recipes">Candidate Recipes</string>
    <string name="send_candidates">Send Candidates</string>
    <string name="get_candidates">Get Candidates</string>
    <string name="current_group">Current Group</string>
    <string name="change_group">Change Group</string>
    <string name="votes">Votes</string>
    <string name="create_vote">Create Vote</string>
    <string name="contact_selection">Contacts</string>
    <string name="selected_contacts">Selected Contacts</string>
    <string name="contacts">Contacts</string>
    <string name="recipes">Recipes</string>
    <string name="vote_end_time">Vote End Time</string>
    <string name="adjust_time">Adjust Time</string>
    <string name="contact_email">Contact email</string>
    <string name="send_request">Send Request</string>

</resources>
