<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userDialogContainer"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background_light"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/firstNameUserInfoDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textCursorDrawable="@null" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/lastNameUserInfoDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/emailUserInfoDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/explicativeTextUserInfoSubtitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/subtitle_gray"
            android:gravity="center"
            android:text="@string/registration_text_subtitle"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/explicativeTextUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="10dp"
            android:text="@string/registration_explicative_text"/>
    </LinearLayout>

    <Button
        android:id="@+id/userInfoRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_button"
        android:text="@string/register"
        android:textColor="@color/white" />

</LinearLayout>
