<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addRecipeName"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/addrecipe_name"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_recipe"
        android:id="@+id/addRecipeConfirm"
        android:layout_gravity="center_horizontal|bottom" />

    <TextView
        android:text="@string/existing_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/addRecipeRecipes"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </ListView>


</LinearLayout>